--- a/app/globals.css
+++ b/app/globals.css
@@ -74,3 +74,25 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities {
+  .animate-move {
+    @apply custom-animation; /* Applying the custom animation */
+  }
+}
+
+.custom-animation {
+  animation: fwd 10s infinite;
+}
+
+@keyframes fwd {
+  0%,
+  100% {
+    transform: translateX(0px);
+    /* transform: rotateY(180deg); */
+  }
+  50% {
+    transform: translateX(1000px);
+    /* transform: rotateY(0deg); */
+  }
+}
